[package]
name = "RustVulkan"
version = "0.1.0"
edition = "2024"

[dependencies]
ash = { git = "https://github.com/ash-rs/ash", features = ["linked"] }
winit = { version = "0.30", default-features = false, features = ["x11", "wayland"] }
ash-window = { git = "https://github.com/ash-rs/ash" }
log = "0.4"
env_logger = "0.11"
ash-examples = { git = "https://github.com/ash-rs/ash", package = "ash-examples" }
